@@ -239,6 +239,9 @@ Trunk (unreleased changes)
     HADOOP-3342. Change the kill task actions to require http post instead of 
     get to prevent accidental crawls from triggering it. (enis via omalley)
 
+    HADOOP-3937. Limit the job name in the job history filename to 50 
+    characters. (Matei Zaharia via omalley)
+
   OPTIMIZATIONS
 
     HADOOP-3556. Removed lock contention in MD5Hash by changing the 
